--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,25 +29,25 @@ dist.jar=${dist.dir}/Kostajabot.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-io-2.4-javadoc.jar=/home/kostersson/data/oma/commons-io-2.4/commons-io-2.4-javadoc.jar
-file.reference.commons-io-2.4-sources.jar=/home/kostersson/data/oma/commons-io-2.4/commons-io-2.4-sources.jar
-file.reference.commons-io-2.4-test-sources.jar=/home/kostersson/data/oma/commons-io-2.4/commons-io-2.4-test-sources.jar
-file.reference.commons-io-2.4-tests.jar=/home/kostersson/data/oma/commons-io-2.4/commons-io-2.4-tests.jar
-file.reference.commons-io-2.4.jar=/home/kostersson/data/oma/commons-io-2.4/commons-io-2.4.jar
-file.reference.commons-net-3.3-sources.jar=/home/kostersson/data/oma/commons-net-3.3/commons-net-3.3-sources.jar
-file.reference.commons-net-3.3.jar=/home/kostersson/data/oma/commons-net-3.3/commons-net-3.3.jar
-file.reference.commons-net-examples-3.3.jar=/home/kostersson/data/oma/commons-net-3.3/commons-net-examples-3.3.jar
+file.reference.commons-io-2.4-javadoc.jar=src/kostajabot/libs/commons-io-2.4/commons-io-2.4-javadoc.jar
+file.reference.commons-io-2.4-sources.jar=src/kostajabot/libs/commons-io-2.4/commons-io-2.4-sources.jar
+file.reference.commons-io-2.4-test-sources.jar=src/kostajabot/libs/commons-io-2.4/commons-io-2.4-test-sources.jar
+file.reference.commons-io-2.4-tests.jar=src/kostajabot/libs/commons-io-2.4/commons-io-2.4-tests.jar
+file.reference.commons-io-2.4.jar=src/kostajabot/libs/commons-io-2.4/commons-io-2.4.jar
+file.reference.commons-net-3.3-sources.jar=src/kostajabot/libs/commons-net-3.3/commons-net-3.3-sources.jar
+file.reference.commons-net-3.3.jar=src/kostajabot/libs/commons-net-3.3/commons-net-3.3.jar
+file.reference.commons-net-examples-3.3.jar=src/kostajabot/libs/commons-net-3.3/commons-net-examples-3.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-net-3.3-sources.jar}:\
-    ${file.reference.commons-net-3.3.jar}:\
-    ${file.reference.commons-net-examples-3.3.jar}:\
     ${file.reference.commons-io-2.4-javadoc.jar}:\
     ${file.reference.commons-io-2.4-sources.jar}:\
     ${file.reference.commons-io-2.4-test-sources.jar}:\
     ${file.reference.commons-io-2.4-tests.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.commons-net-3.3-sources.jar}:\
+    ${file.reference.commons-net-3.3.jar}:\
+    ${file.reference.commons-net-examples-3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
