Set users to channels when getting "channel users" message

--- a/src/configurations/resources/configuration.properties
+++ b/src/configurations/resources/configuration.properties
@@ -2,5 +2,6 @@ nick=Kostajabot
 ident=Kostajabot
 usermodes=8
 realname=Kostersson's Kostajabot
+network=quakenet
 quakenetServer=irc.fi.quakenet.org
 ircPort=6667
